# reconocimiento-facial-one

./: .env-ex  README.md  docker-compose.yaml  hello.py  pyproject.toml
src/DAO/: __init__.py  connection.py  face_recognition_validations.py
src/GUI/: interfaz_reconocimiento_facial.py  interfaz_registro_biometria_facial.py  main_screen.py
src/reconocimiento_one/: __init__.py  main.py
