[project]
name = "reconocimiento-one"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lesh3n", email = "80481150+Lesh3n@users.noreply.github.com" }
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "face-recognition>=1.3.0",
    "face-recognition-models @ git+https://github.com/ageitgey/face_recognition_models",
    "dlib==19.21.1",
    "setuptools>=75.6.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
]

readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/reconocimiento_one"]
