[project]
name = "reconocimiento-facial-one"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "face-recognition>=1.3.0",
    "opencv-python>=4.10.0.84",
    "pymysql>=1.1.1",
    "python-dotenv>=1.0.1",
    "setuptools>=75.6.0",
]
